Add a custom Password type that allows reading a password from a user withut revealing the password. Add a simple example.

--- a/prompt/Cargo.toml
+++ b/prompt/Cargo.toml
@@ -10,3 +10,4 @@ repository = "https://github.com/uglyoldbob/prompt"
 
 [dependencies]
 prompt_derive = { version = "0.0.1", path = "../prompt_derive" }
+rpassword = "7.3.1"
