--- a/prompt/Cargo.toml
+++ b/prompt/Cargo.toml
@@ -11,3 +11,6 @@ repository = "https://github.com/uglyoldbob/prompt"
 [dependencies]
 prompt_derive = { version = "0.0.1", path = "../prompt_derive" }
 rpassword = "7.3.1"
+
+[features]
+serde = []
