--- a/prompt/Cargo.toml
+++ b/prompt/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/uglyoldbob/prompt"
 [dependencies]
 prompt_derive = { version = "0.0.1", path = "../prompt_derive" }
 rpassword = "7.3.1"
+serde = {version = "1.0.197", optional = true }
 
 [features]
-serde = []
+serde = [ "dep:serde" ]
