--- a/examples/gui/Cargo.toml
+++ b/examples/gui/Cargo.toml
@@ -6,5 +6,5 @@ publish = false
 
 [dependencies]
 eframe = "0.27.2"
-prompt = { path = "../../prompt" }
+prompt = { path = "../../prompt", features = ["egui"] }
 simple_logger = "4.3.3"
