--- a/prompt/Cargo.toml
+++ b/prompt/Cargo.toml
@@ -16,6 +16,6 @@ rpassword = "7.3.1"
 serde = {version = "1.0.197", features = ["serde_derive"], optional = true }
 
 [features]
-default = ["egui"]
+default = []
 serde = [ "dep:serde" ]
 egui = [ "dep:egui", "prompt_derive/egui", "dep:rfd" ]
