--- a/userprompt/Cargo.toml
+++ b/userprompt/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "prompt"
+name = "userprompt"
 version = "0.0.1"
 description="A crate that helps gather input from a user"
 license = "GPL-3"
@@ -10,7 +10,7 @@ repository = "https://github.com/uglyoldbob/prompt"
 
 [dependencies]
 egui = {version = "0.27.2", optional = true }
-prompt_derive = { version = "0.0.1", path = "../prompt_derive" }
+userprompt_derive = { version = "0.0.1", path = "../userprompt_derive" }
 rfd = { version = "0.14.1", optional = true }
 rpassword = "7.3.1"
 serde = {version = "1.0.197", features = ["serde_derive"], optional = true }
@@ -18,4 +18,4 @@ serde = {version = "1.0.197", features = ["serde_derive"], optional = true }
 [features]
 default = []
 serde = [ "dep:serde" ]
-egui = [ "dep:egui", "prompt_derive/egui", "dep:rfd" ]
+egui = [ "dep:egui", "userprompt_derive/egui", "dep:rfd" ]
