--- a/userprompt_derive/Cargo.toml
+++ b/userprompt_derive/Cargo.toml
@@ -2,6 +2,8 @@
 name = "userprompt_derive"
 version = "0.0.1"
 edition = "2021"
+description = "The derive library for the userprompt crate. Derives prompt traits"
+license = "GPL-3"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
